--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/kyleshepherd/discord-tk-bot#readme",
   "dependencies": {
     "discord.js": "^12.0.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
