--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
-    "mysql": "^2.18.1"
+    "firebase": "^8.6.3"
   },
   "devDependencies": {
     "eslint": "^6.8.0"
