--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/kyleshepherd/discord-tk-bot#readme",
   "dependencies": {
+    "discord-buttons": "^3.2.1",
     "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
     "firebase": "^8.6.3"
