feat(config): Update firebase config:

--- a/configs/example.toml
+++ b/configs/example.toml
@@ -10,9 +10,5 @@ removeCommands = true
 guildId = ""
 
 [firebase]
-apiKey = ""
-authDomain = ""
 projectId = ""
-storageBucket = ""
-messagingSenderId = ""
-appId = ""
+serviceAccountFilePath = ""
